Master: added mailing capability, contact php with validation, front end jquery and also blog post

--- a/etherealize/index.html
+++ b/etherealize/index.html
@@ -353,7 +353,7 @@
     </div>
     <div class="content-section portfolio-area no-padding-bottom">
       <div class="portfolio-list">
-        <ul class="filter-list">
+        <!-- <ul class="filter-list">
           <li class="mix all design grid-4">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-1.jpg" alt="showcase">
@@ -423,7 +423,7 @@
                   <a href="images/resource/portfolio-7.jpg" class="link-pop image-popup"></a> <a href="portfolio-popup-2.html" class="link-zoom ajax-popup"></a> </figcaption>
               </figure>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -558,70 +558,42 @@
           <!-- Stats section -->
           <div class="stats-section">
             <div class="row">
+              <div class="col-sm-3"></div>
               <div class="col-sm-3 animated out" data-animation="bounceIn" data-delay="0">
-                <div class="stat-box text-center">
+                <div class="stat-box text-center" style="height:550px;">
                   <!-- <figure class="image"> <img src="images/resource/img-1.jpg" alt="image"> -->
                     <figcaption>
                       <div class="iconic"><i class="icon-brush"></i></div>
-                      <div class="h4"><a href="#">PROJECTS CONSULTING</a></div>
+                      <div class="h4"><a href="#" style="color:white;">PROJECTS CONSULTING</a></div>
                     </figcaption>
                   </figure>
                   <div class="detail"> 3 </div>
                   <div class="stat-hover">
                     <div class="iconic"><i class="icon-brush"></i></div>
-                    <div class="h4"><a href="#">PROJECTS CONSULTING</a></div>
-                    <p>We are consulting 3 projects. One in the real estate market, another in fund management and finl</p>
+                    <div class="h4"><a href="#"> PROJECTS CONSULTING</a></div>
+                    <p>We are consulting 3 projects. One in the real estate market, another in fund management and one in the virtual gaming domain.</p>
                   </div>
                 </div>
               </div>
               <div class="col-sm-3 animated out" data-animation="bounceIn" data-delay="200">
-                <div class="stat-box text-center">
-                  <figure class="image"> <img src="images/resource/img-1.jpg" alt="image">
+                <div class="stat-box text-center" style="height:550px;">
+                  <!-- <figure class="image"> <img src="images/resource/img-1.jpg" alt="image"> -->
                     <figcaption>
                       <div class="iconic"><i class="icon-air"></i></div>
-                      <div class="h4"><a href="#">LINES OF CODE</a></div>
+                      <div class="h4"><a href="#" style="color:white;">PROJECTS DEVELOPING</a></div>
                     </figcaption>
                   </figure>
-                  <div class="detail"> 3805 </div>
+                  <div class="detail"> 1 </div>
                   <div class="stat-hover">
                     <div class="iconic"><i class="icon-air"></i></div>
-                    <div class="h4"><a href="#">LINES OF CODE</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+                    <div class="h4"><a href="#">PROJECTS DEVELOPING</a></div>
+                    <p>Etherealize is developing a virtual game that leverages the blockchain. We are writing a smart contract that enables users to interact
+                      with it from a web and phone application. The smart contract keeps the storage and state of the entire game. Users can purchase items,
+                      transfer tokens and execute events. More information about this project will be released when appropriate.
+                    </p>
                   </div>
                 </div>
-              </div>
-              <div class="col-sm-3 animated out" data-animation="bounceIn" data-delay="400">
-                <div class="stat-box text-center">
-                  <figure class="image"> <img src="images/resource/img-2.jpg" alt="image">
-                    <figcaption>
-                      <div class="iconic"><i class="icon-thumbsup"></i></div>
-                      <div class="h4"><a href="#">HAPPY CLIENTS</a></div>
-                    </figcaption>
-                  </figure>
-                  <div class="detail"> 10938 </div>
-                  <div class="stat-hover">
-                    <div class="iconic"><i class="icon-thumbsup"></i></div>
-                    <div class="h4"><a href="#">HAPPY CLIENTS</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-3 animated out" data-animation="bounceIn" data-delay="600">
-                <div class="stat-box text-center">
-                  <figure class="image"> <img src="images/resource/img-3.jpg" alt="image">
-                    <figcaption>
-                      <div class="iconic"><i class="icon-upload2"></i></div>
-                      <div class="h4"><a href="#">FILES UPLOADED</a></div>
-                    </figcaption>
-                  </figure>
-                  <div class="detail"> 1302 </div>
-                  <div class="stat-hover">
-                    <div class="iconic"><i class="icon-upload2"></i></div>
-                    <div class="h4"><a href="#">FILES UPLOADED</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-                  </div>
-                </div>
-              </div>
+              </div>             
             </div>
           </div>
         </div>
@@ -641,29 +613,30 @@
     </div>
     <div class="content-section no-padding-bottom">
       <div class="container">
-        <div class="blog-area">
+        <div class="larea">
           <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-1">
 
             </div>
-            <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="0">
+            <div class="col-sm-5 animated out" data-animation="fadeInUp" data-delay="0">
               <div class="blog-box">
-                <figure class="image"> <img src="images/resource/img-4.jpg" alt="image"> </figure>
+                <figure class="image"> <img src="images/resource/blog1.png" alt="image"> </figure>
                 <div class="detail">
-                  <h4>Popular Query: <strong>How to buy Ether</strong></h4>
+                  <h4>How to buy <strong>Ether</strong></h4>
                   <p class="meta">Posted by <a href="#">Marty</a> - 8th Dec 2017</p>
                   <p>Cryptocurrencies such as Ether are experiencing a boom of popularity. The curve of adoption has become exponential. A popular query amongst most have been "How do I buy ether?". This post will walk Australian's through the process..</p>
-                  <a href="blog-popup-1.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
+                  <a href="blog-buy-ether.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
               </div>
             </div>
-            <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="200">
+            <div class="col-sm-5 animated out" data-animation="fadeInUp" data-delay="200">
               <div class="blog-box">
-                <figure class="image"> <img src="images/resource/img-5.jpg" alt="image"> </figure>
+                <figure class="image"> <img src="images/resource/blog-2.png" alt="image"> </figure>
                 <div class="detail">
                   <h4>Welcome to <strong>Etherealize</strong></h4>
                   <p class="meta">Posted by <a href="#">Marty</a> - 5th Dec 2017</p>
-                  <p>Etherealize is co founded by two software engineers </p>
-                  <a href="blog-popup-1.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
+                  <p>Etherealize is a Software Engineering company that specialises in Smart Contracts and end to end blockchain solutions with a particular focus on Ethereum.</p>
+                  <br>
+                  <a href="blog-popup-2.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
               </div>
             </div>
             <!-- <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="400">
@@ -688,7 +661,7 @@
       <div class="container">
         <header class="heading animated out" data-animation="fadeInUp" data-delay="0">
           <h2>Our <strong>Team</strong></h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+          <p>Meet the Etherealize Team</p>
         </header>
       </div>
     </div>
@@ -700,30 +673,24 @@
             </div>
             <div class="col-sm-3 animated out" data-animation="fadeInUp" data-delay="0">
               <div class="team-box">
-                <figure class="image"> <img src="images/resource/team-1.jpg" alt="image"> </figure>
+                <figure class="image"> <img src="images/resource/team-adam.jpg" alt="image"> </figure>
                 <div class="detail">
                   <h4><a href="#">Adam Adair</a></h4>
-                  <p class="designation">Software Engineer and Co-founder</p>
+                  <p class="designation">Co-founder</p>
                   <ul class="social-links">
-                    <li><a href="#" class="icon-facebook-square"></a></li>
-                    <li><a href="#" class="icon-twitter-square"></a></li>
-                    <li><a href="#" class="icon-google-plus-square"></a></li>
-                    <li><a href="#" class="icon-pinterest-square"></a></li>
+                    <li><a href="https://au.linkedin.com/in/adam-adair-b41aa49a" class="icon-linkedin-square"></a></li>
                   </ul>
                 </div>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="fadeInUp" data-delay="200">
               <div class="team-box">
-                <figure class="image"> <img src="images/resource/team-2.jpg" alt="image"> </figure>
+                <figure class="image"> <img src="images/resource/team-marty1.png" alt="image"> </figure>
                 <div class="detail">
                   <h4><a href="#">Marty Kieliszek</a></h4>
-                  <p class="designation">Software Engineer and Co-founder</p>
+                  <p class="designation">Co-founder</p>
                   <ul class="social-links">
-                    <li><a href="#" class="icon-facebook-square"></a></li>
-                    <li><a href="#" class="icon-twitter-square"></a></li>
-                    <li><a href="#" class="icon-google-plus-square"></a></li>
-                    <li><a href="#" class="icon-pinterest-square"></a></li>
+                    <li><a href="https://au.linkedin.com/in/martin-kieliszek" class="icon-linkedin-square"></a></li>
                   </ul>
                 </div>
               </div>
@@ -761,7 +728,7 @@
                   </ul>
                   <!-- <div class="price-amount"> <small>Starts From</small> $100 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
+                <div class="price-btm"> <a href="#contactForm">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInRight" data-delay="200">
@@ -776,7 +743,7 @@
                   </ul>
                   <!-- <div class="price-amount"> <small>Starts From</small> $250 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
+                <div class="price-btm"> <a href="#contactForm">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInLeft" data-delay="0">
@@ -792,7 +759,7 @@
                   </ul>
                   <!-- <div class="price-amount"> <small>Starts From</small> $500 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
+                <div class="price-btm"> <a href="#contactForm">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInRight" data-delay="200">
@@ -808,7 +775,7 @@
                   </ul>
                   <!-- <div class="price-amount"> <small>Starts From</small> $750 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
+                <div class="price-btm"> <a href="#contactForm">Enquire about this Plan</a> </div>
               </div>
             </div>
           </div>
@@ -817,8 +784,9 @@
         <!-- contact form -->
         <div class="contact-form animated out" data-animation="fadeIn" data-delay="0">
           <form class="contactForm">
-            <input type="text" class="form-control" placeholder="Not sure what's best for you? Contact us and we can help you out">
-            <input type="submit" class="btn btn-primary" value="Contact">
+            <!-- <input type="text" class="form-control" placeholder="Not sure what's best for you? Contact us and we can help you out"> -->
+            <!-- <input type="submit" class="btn btn-primary" value="Contact"> -->
+            <a class="btn btn-primary" href="#contactForm" value="">Contact</a>
           </form>
         </div>
       </div>
@@ -828,11 +796,11 @@
     <div class="social-section">
       <div class="container">
         <ul class="social-links animated out" data-animation="bounceIn" data-delay="0">
-          <li><a class="icon-facebook" href="#"></a></li>
+          <!-- <li><a class="icon-facebook" href="#"></a></li>
           <li><a class="icon-twitter" href="#"></a></li>
           <li><a class="icon-google-plus" href="#"></a></li>
-          <li><a class="icon-pinterest" href="#"></a></li>
-          <li><a class="icon-youtube" href="#"></a></li>
+          <li><a class="icon-pinterest" href="#"></a></li> -->
+          <li><a class="icon-youtube" href="https://www.youtube.com/watch?v=TDGq4aeevgY"></a></li>
         </ul>
       </div>
     </div>
@@ -847,35 +815,45 @@
         </header>
       </div>
     </div>
-    <div class="content-section">
+    <div class="content-section" id="contactForm">
       <div class="container">
         <form class="contact-form">
           <ul class="row">
             <li class="col-sm-6">
               <div class="user animated out" data-animation="fadeInUp" data-delay="0">
-                <input type="text" class="form-control" placeholder="Name">
+                <input type="text" class="form-control" id="contactName" placeholder="Name">
               </div>
             </li>
             <li class="col-sm-6 animated out" data-animation="fadeInUp" data-delay="200">
               <div class="envelop">
-                <input type="text" class="form-control" placeholder="Email Address">
+                <input type="text" class="form-control" id="contactEmail" placeholder="Email Address">
               </div>
             </li>
             <li class="col-sm-6 animated out" data-animation="fadeInUp" data-delay="0">
               <div class="category">
-                <input type="text" class="form-control" placeholder="Message Category">
+                <input type="text" class="form-control" id="contactCategory" placeholder="Message Category" name="category">
               </div>
             </li>
             <li class="col-sm-6 animated out" data-animation="fadeInUp" data-delay="200">
               <div class="tag">
-                <input type="text" class="form-control" placeholder="Subject">
+                <input type="text" class="form-control" id="contactSubject" placeholder="Subject" name="subject">
               </div>
             </li>
             <li class="col-sm-12 animated out" data-animation="fadeInUp" data-delay="0">
-              <textarea class="form-control" placeholder="Write Your Message"></textarea>
+              <textarea class="form-control" id="contactMessage" placeholder="Write Your Message"></textarea>
             </li>
             <li class="col-sm-12 animated out" data-animation="fadeInUp" data-delay="0">
-              <input type="submit" class="btn btn-primary" value="Send Message">
+              <input type="submit" id="submitButton" class="btn btn-primary" style="margin-bottom:10px;" value="Send Message">
+              <div id="submitLoader" style="display:none;">
+                <img src="/css/assets/loader2.gif" alt="Please wait.." />
+            </div>
+            <div class="alert alert-success" id="successMessage" style="display:none;">
+              <strong>Success!</strong> Your enquiry has been sent to us and you have been cc'd.
+            </div>
+            <div class="alert alert-danger" id="errorMessage" style="display:none;">
+              <strong>Error..</strong> <span id="errMessage"></span>
+            </div>
+                        
             </li>
           </ul>
         </form>
@@ -884,7 +862,7 @@
   </article>
   <div class="site-btm">
     <div class="container">
-      <p>2017 © <strong>ETHEREALIZE</strong>. All rights reserved.</p>
+      <p>2017 © <strong>ETHEREALIZE PTY LTD</strong>. All rights reserved.</p>
     </div>
   </div>
 </div>
